v0.9.8  April 2018:  Fixed some bugs and added associated regression tests to
        the test suite for each bug:
        -  Corrected a bug when using the new "likelihood_lines" feature that
        could cause incorrect likelihood calculations (predictions compared to
        the wrong observations).  The NB_Result attributes "obs_flux_arrs" and
        "obs_flux_err_arrs" are now dicts rather than lists.
          -  The calculation of line ratio priors now uses dereddened observed
        fluxes and errors when deredden=True.  Previously results were incorrect
        when deredden=True and the lines in a ratio had a nontrivial wavelength
        separation.  There are new signatures for "calculate_line_ratio_prior"
        and custom prior callbacks (docs/2_Example-advanced.py was updated).
          -  Calculations for the "best model" table, chi^2, and extinction now
        use the gridpoint defined by the peaks of the marginalised 1D PDFs to
        define the "best model".  Previously the n-D PDF peak was inadvertently
        used.  The calculations for parameter estimates are unchanged.  The
        "best_model" dict on NB_nd_pdf objects now has a "grid_location" key
        and the "Index_of_peak" field was added to parameter estimate tables.
v0.9.9  June 2018 - July 2020:  The default grid_error is now 0.1 instead of
        0.35, which will affect parameter estimates.  The interaction of the
        "verbosity" keyword with the logging level was improved, and "ERROR" is
        now an allowed level.  Stop using deprecated pandas method "set_value".
v1.0.0  July 2020:  Propagating the error in the Balmer decrement when
        dereddening is now optional.  Added new option propagate_dered_errors,
        which is False by default.  This will affect parameter estimates when
        NebulaBayes dereddening is used; constraints will be tighter.  Set
        propagate_dered_errors=True for the old behaviour.
